<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_padding"
    tools:context=".NewOrEditContactFragment">


    <EditText
        android:id="@+id/etNameNew"
        style="@style/editTextStyle"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:hint="@string/Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSecondNameNew"
        style="@style/editTextStyle"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:hint="@string/SecondName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameNew" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSecondNameNew" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSecondNameNew"
        app:layout_constraintTop_toTopOf="@+id/etNameNew">

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/man_gender" />

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman_gender" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddNewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>